# korean-anki-pipeline

./: .env.example  .gitignore  CHANGELOG.md  IDEAS.md  README.md  REFACTOR.md  pyproject.toml
data/samples/: numbers.batch.json  numbers.lesson.json  phrases.batch.json  phrases.lesson.json
implementation_plans/: 01-adaptive-core.md  02-new-vocab-lane.md  02-reading-speed-lane.md  03-grammar-lane.md  03-new-vocab-lane.md  04-grammar-lane.md  04-listening-lane.md  05-listening-lane.md  05-writing-companion.md  06-reading-speed-companion.md  06-writing-companion.md  README.md
lessons/2026-03-23-numbers/: README.md  lesson-log.md  qa-report.json  transcription.json
preview/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
preview/e2e/: batch.spec.ts  home.spec.ts
preview/scripts/: generate-schema-types.mjs
preview/src/: App.tsx  index.css  main.tsx
scripts/: bootstrap.sh  install-self-heal.sh
src/korean_anki/: __init__.py  anki.py  anki_client.py  anki_media_sync.py  anki_note_codec.py  anki_push_service.py  anki_queries.py  anki_repository.py  application.py  batch_generation_service.py  batch_repository.py  card_rendering.py  cards.py  cli.py  dashboard_service.py  dashboard_snapshots.py  http_api.py  job_handlers.py  job_store.py  (+34 more)
tests/: support.py  test_anki.py  test_cards.py  test_cli.py  test_jobs.py  test_media.py  test_new_vocab.py  test_portability.py  test_push_service.py  test_reading_speed.py  test_schema.py  test_service_guardian.py  test_stages.py  test_study_state.py  test_vocabulary_model.py
(+51 files in other folders)
